--- a/app/views/sounds/_form.html.erb
+++ b/app/views/sounds/_form.html.erb
@@ -14,6 +14,9 @@
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
+
+    <%= form.label :音声ファイル %>
+    <%= form.file_field :file %>
   </div>
 
   <div class="actions">
